--- a/tildagon.toml
+++ b/tildagon.toml
@@ -1,10 +1,10 @@
 [app]
 # The name of your app as displayed in the menu
-name = "Demo App"
+name = "Caffeine Jitters"
 
 # The submenu where your app should appear.
 # One of: "Badge", "Music", "Media", "Apps", "Games"
-category = "Badge"
+category = "Apps"
 
 # OPTIONAL: Same as above, for compatibility with older firmware
 # versions that can't handle categories introduced afterwards.
@@ -18,20 +18,20 @@ category = "Badge"
 
 [entry]
 # The name of your entry point `Application` class
-# class = "NickApp"
+class = "CaffeineJitter"
 
 [metadata]
 # Your nickname.  Must be at most 32 characters!
-author = "hughrawlinson"
+author = "walkerdanny"
 
 # License of your app as an SPDX identifier: <https://spdx.org/licenses/>
-license = "LGPL-3.0-only"
+license = "MIT"
 
 # URL to the repository of your app.
-url = "https://www.github.com/hughrawlinson/tildagon-demo"
+url = "https://github.com/walkerdanny/caffeine-jitters"
 
 # Description of your app.  Maximum 140 characters!
-description = "A demo tildagon app for use developing the app directory"
+description = "Companion app for the Club Mate haptics hexpansion. Up and down buttons change the jitter frequency!"
 
 # Version number of your app.  If you push a commit where this number is
 # increased, we interpret this as a new version being released.
